# PwR-NL2DSL

./: .env.template  .gitignore  README.md  cli.py  env.template  pyproject.toml
.github/workflows/: python-test.yml
nl2dsl/: __init__.py
nl2dsl/prompts/: atomic.py  config_vars.py  global_variables.py  plan.py  plugin.py  task_types.py
nl2dsl/utils/: checker.py  dsl_utils.py  mini_llm.py
tests/: basic.py  plugins.yaml  sample.json
